syntax = "proto3";
package sifnode.oracle.v1;

import "gogoproto/gogo.proto";
import "sifnode/oracle/v1/network_descriptor.proto";

option go_package = "github.com/Sifchain/sifnode/x/oracle/types";

message GenesisState {
  map<uint32, ValidatorWhiteList> address_whitelist = 1;
  string admin_address = 2;
  repeated Prophecy prophecies = 3;
}

// Claim contains an arbitrary claim with arbitrary content made by a given
// validator
message Claim {
  string id = 1;
  string validator_address = 2;
  string content = 3;
}

// Prophecy is what the prophecy becomes when being saved to the database.
//  Tendermint/Amino does not support maps so we must serialize those variables
//  into bytes.
message Prophecy {
  bytes id = 1;
  StatusText status = 2;
  repeated string claim_validators = 3;
}

// ValidatorWhiteList is struct that contains validator and its voting power
message ValidatorWhiteList { map<string, uint32> white_list = 1; }

// StatusText is an enum used to represent the status of the prophecy
enum StatusText {
  // Default value
  STATUS_TEXT_UNSPECIFIED = 0;
  // Pending status
  STATUS_TEXT_PENDING = 1;
  // Success status
  STATUS_TEXT_SUCCESS = 2;
}

// NativeTokenConfig is native token config for each network
message NativeTokenConfig {
  string native_token = 1;
  string native_gas = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"native_gas\""
  ];
  string minimum_lock_cost = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"minimum_lock_cost\""
  ];
  string minimum_burn_cost = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"minimum_burn_cost\""
  ];
}

// ProphecySignatures include the ethereum addressed and signatures.
message ProphecySignatures {
  sifnode.oracle.v1.NetworkDescriptor network_descriptor = 1
      [ (gogoproto.moretags) = "yaml:\"network_descriptor\"" ];
  repeated string ethereum_address = 2;
  repeated string signatures = 3;
}